--- a/PetFactoryBD/app/src/main/res/layout/fragment_create_user.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_create_user.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.StoreFragment">
+    tools:context=".fragments.login.CreateUserFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/txtStore"
+        android:id="@+id/txtCreate"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Store" />
+        android:text="Create" />
 
 </FrameLayout>
