--- a/PetFactoryBD/app/src/main/res/layout/fragment_create_user.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_create_user.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.login.CreateUserFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/txtCreate"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Create" />
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
