--- a/PetFactoryBD/app/src/main/res/layout/fragment_login.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_login.xml
@@ -4,16 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#e67e22"
     android:gravity="center">
 
     <!-- Title or Header -->
     <ImageView
-        android:id="@+id/loginTitle"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:id="@+id/img"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:text="Login"
+        android:textSize="24sp"
         android:src="@drawable/robot_one_svgrepo_com"
+        android:layout_marginBottom="24dp"/>
+
+    <!-- Title or Header -->
+    <TextView
+        android:id="@+id/loginTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:textSize="24sp"
         android:layout_marginBottom="24dp"/>
 
     <!-- Username or Email Input -->
@@ -24,7 +33,7 @@
         android:hint="Username or Email"
         android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp"
-        android:padding="12dp" />
+        android:padding="12dp"/>
 
     <!-- Password Input -->
     <EditText
@@ -68,3 +77,5 @@
         android:elevation="6dp"/>
 
 </LinearLayout>
+
+
