--- a/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
@@ -6,16 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnHome"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnConfig"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="20dp"
-        android:text="HOME" />
+        app:srcCompat="@drawable/configuration"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
