--- a/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/btn_store"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnCoins"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/coins"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnPlay"
         android:layout_width="wrap_content"
