--- a/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
+++ b/PetFactoryBD/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,7 @@
         android:layout_margin="16dp"/>
 
     <TextView
-        android:id="@+id/monedas"
+        android:id="@+id/txtCoins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="500"
